--- a/s9/TODO
+++ b/s9/TODO
@@ -1,11 +1,9 @@
 
-	- catch / throw
-
-	- catch-errors
-
 	- disassembler
 
 	- clean up the library
+
+	- review systest
 
 	- optimizations:
 		variadic string-append
