updated to s9fes-20181124 from t3x.org

--- a/s9/TODO
+++ b/s9/TODO
@@ -1,15 +1,8 @@
 
-	- disassembler
-
 	- clean up the library
 
 	- review systest
 
-	- optimizations:
-		variadic string-append
-		variadic vector-append
-
-	- EDOC: handle white space in block comments properly
-
-	- EDOC: troff mode
+	- EDOC: handle #| |# comments correctly
+		handle white space in block comments properly
 
