--- a/s9/README
+++ b/s9/README
@@ -12,7 +12,7 @@
 	- support for low-level Unix programming
 	- cursor addressing with Curses
 	- basic networking procedures
-	- integrated online help system
+	- an integrated online help system
 	- loads of useful library functions
 
 	It is written in ANSI C (C89) and Scheme and runs in many
@@ -40,32 +40,42 @@
 	- SRFI-30: nested multi-line comments
 	- SRFI-43: vector library                      (subset)
 
+	Bakul Shah maintains a downstream repository with extended
+	Plan 9 support, like access to system functions and an FFI:
+	https://github.com/bakul/s9fes.  Please send any feedback
+	regarding the Plan 9 extension directly to him.
+
 
 	QUICK START
 
-	You can run the interpreter in its build directory without
+	You can run an S9 interpreter in its build directory without
 	installing it. Just type
 
-		cc -o s9 s9.c s9core.c
-		./s9 -i - -d s9.image
+	    cc -o s9 s9.c s9core.c
+	    ./s9 -i - -d s9.image
 
 	and then "./s9". You might have to add -Dplan9 on Plan 9 systems.
+	The interpreter will support full R4RS Scheme, but none of the
+	extensions provided by S9 (Unix system calls, Curses, etc).
 
-	The S9 code is only loosely coupled to its Makefile, so in most
-	cases running "cc" as above will compile the interpreter just
-	fine. (However, doing so will not include the Unix, Curses, and
-	Networking extensions.)
+	A quick test of the interpreter can be performed by running
+
+	    ./s9 util/test.scm
+
+	In order to bring up the online help system, run
+
+	    ./s9 -l contrib/help.scm -d s9.image
+
+	When running ./s9 for the next time, the following help commands
+	will be available:
+
+	    ,h  explain the online help system
+	    ,a  return a list of all help topics (long!)
 
 	On most systems of the Unix family (plus CygWin and MinGW),
 	you can compile and install S9fES by running "make install".
 
-	Once installed, typing "s9" will start the interpreter.
-
-	,h  explains the online help system.
-	,a  returns a list of all help topics (long!).
-
-	If the above commands do not work, try  ,l contrib/help.scm
-	first.
+	See below for further instructions.
 
 
 	COMPILING AND INSTALLING
@@ -76,21 +86,13 @@
 	the test suite to make sure that the interpreter works properly).
 	Running "make tests" will run even more tests.
 
-	On 64-bit platforms, you *can* enable 64-bit cells, but there
-	are not really any benefits to this. The default is to create
-	a system based on 32-bit cells, even on 64-bit platforms.
-
 	You can install S9fES (including the goodies) on a Unix system
 	by typing "make install" as root, but before doing so, please
 	edit at least the PREFIX variable at the beginning of Makefile.
-	(Be sure to re-compile S9fES (make clean; make) after changing
-	 PREFIX, because it is used to set up some internal paths).
+	Be sure to re-compile S9fES (make clean; make) after changing
+	PREFIX, because it is used to set up some internal paths.
 
 	Plan 9
-
-	Before installing, run "rc util/fix-links.rc". The help/
-	directory contains symlinks, and the above script replaces
-	them by copies.
 
 	To compile S9fES on Plan 9 from Bell Labs, just type "mk".
 	The "test" and "tests" targets will run tests, just like on
@@ -109,7 +111,7 @@
 	To install S9fES manually,
 
 	- Compile s9 with a proper image directory and library path (the
-	  ones hardwired in "s9.h" are probably not what you want). E.g.:
+	  ones hardwired in "s9.c" are probably not what you want). E.g.:
 
 	  cc -o s9 -DIMAGE_DIR="\"dir\"" -DLIBRARY_PATH="\"path\"" \
 		s9.c s9core.c
@@ -163,28 +165,27 @@
 
 	CONFIGURATION
 
-	You may create the S9FES_LIBRARY_PATH environment variable and
-	make it point to S9DIR as well as other directories that
-	contain Scheme programs. The variable may contain a single
-	directory or a colon-separated list of directories that will be
-	searched in sequence for library files, and help pages (in
-	"help" subdirectories contained in the given paths).
+	To create an image file containing additional functionality,
+	add the desired options to the "config.scm" file, run
 
-	S9FES_LIBRARY_PATH overrides LIBRARY_PATH, so all directories
-	listed in the latter should also be present in the former.
+	s9 -i - -l config.scm -d s9.image
+
+	and copy the resulting image to your IMAGE_DIR.
 
 	If you are keeping your image files in a location other than
 	S9DIR, you can create the S9FES_IMAGE_DIR environment variable
 	and make it point to your preferred location. In this case
 	"s9 -i foo.image" will load $S9FES_IMAGE_DIR/foo.image.
 
-	To create an image file containing additional functionality,
-	add the desired options to the "config.scm" file and run
+	You may also create the S9FES_LIBRARY_PATH environment variable
+	and make it point to S9DIR as well as other directories that
+	contain Scheme programs. The variable may contain a single
+	directory or a colon-separated list of directories that will be
+	searched in sequence for library files and help pages (in "help"
+	subdirectories contained in the given paths).
 
-	s9 -i - -l config.scm -d s9.image
-
-	(This step is already included in the default Unix Makefile and
-	 Plan 9 mkfile).
+	S9FES_LIBRARY_PATH overrides LIBRARY_PATH, so all directories
+	listed in the latter should also be present in the former.
 
 
 	GETTING STARTED
