--- a/s9/s9.1
+++ b/s9/s9.1
@@ -67,10 +67,7 @@ Display a brief summary of options.
 Load alternative image file `\fIfile\fP'. Image files will be
 searched in the directory specified in
 .I S9FES_IMAGE_DIR
-(see below) except when the file name begins with a
-.I .
-or
-.I /
+(see below) except when the file name begins with a `.' or `/'
 character. When this option is used, it
 .B must
 be the first one of the s9 command.
@@ -91,7 +88,7 @@ and exit.
 .in +4
 Read expression from
 .IR expr ,
-evaluate, and print value. Multiple
+evaluate it, and print its value. Multiple
 .B -e
 options may be given, which will evaluate from left to right.
 Interactive mode will not be entered.
@@ -121,7 +118,7 @@ before entering the REPL or processing
 .B -e
 and
 .B -r
-options or running a final program (may be repeated).
+options or running a final program. May be repeated.
 .in -4
 .sp
 .B "-n N[m]
@@ -187,7 +184,7 @@ following command first:
 In order to facilitate the invocation of frequently-used top-level
 procedures,
 .B s9
-provides the following "meta commands" (they work only when entered
+provides the following `meta commands' (they work only when entered
 directly at the
 .B s9
 prompt):
@@ -207,7 +204,7 @@ S9fES supports nestable block comments of the form
 .sp
 .in +4
 .nf
-\fB#|\fP \fIcomment ...\fP \fB|#\fP.
+\fB#|\fP \fIcomment\fP \fB|#\fP
 .fi
 .in -4
 .sp
@@ -215,7 +212,7 @@ Square brackets may be used in the places of parentheses:
 .sp
 .in +4
 .nf
-\fB(cond [(foo) (bar)])\fP.
+\fB(cond [(foo) (bar)])\fP
 .fi
 .in -4
 .sp
@@ -263,7 +260,9 @@ Retrieve the value of the given environment variable. Return
 .in +4
 Print an error message of the form
 .I "error: string: object
-and terminate program execution.
+and terminate program execution. When no
+.I object
+argument is given, this part will be omitted in the message.
 .in -4
 .sp
 .ne 3
@@ -275,9 +274,9 @@ in the current environment and return its normal form.
 .in -4
 .sp
 .ne 3
-.B "(exponent real)  ==>  integer
+.B "(exponent number)  ==>  integer
 .in +4
-Extract the exponent part from a real number.
+Extract the exponent part from a number. This will be 0 for integers.
 .in -4
 .sp
 .ne 3
@@ -343,13 +342,13 @@ return \fB#f\fP.
 .in -4
 .sp
 .ne 3
-.B "(macro-expand object)  ==>  object
+.B "(macro-expand object)    ==>  object
 .br 
 .B "(macro-expand-1 object)  ==>  object
 .in +4
 If
 .I object
-contains a macro application, return the expanded form,
+contains a macro application, return its expanded form,
 else return the object unchanged.
 .B Macro-expand-1
 expands macros only once while
@@ -358,9 +357,10 @@ expands them recursively.
 .in -4
 .sp
 .ne 3
-.B "(mantissa real)  ==>  integer
+.B "(mantissa number)  ==>  integer
 .in +4
-Extract the mantissa part from a real number.
+Extract the mantissa part from a number. This will be the
+number itself for integers.
 .in -4
 .sp
 .ne 2
@@ -368,7 +368,7 @@ Extract the mantissa part from a real number.
 .in +4
 Write multiple
 .IR object s
-separated by spaces.
+separated by spaces and with a trailing newline.
 .in -4
 .sp
 .ne 2
@@ -378,7 +378,9 @@ Require the named extensions to be compiled-in. Signal an error
 if not all of the required extensions are present.
 .I Ext
 may be of the form \fI(or ext1 ext2 ...)\fP. In this case,
-it is sufficient if at least one of the given \fIext\fPs is present.
+it is sufficient if at least one of the \fIext\fPs gven in
+.I or
+is present.
 .in -4
 .sp
 .ne 2
@@ -404,10 +406,9 @@ Destructively set the current output port.
 .ne 2
 .B "(stats expr)  ==>  object
 .in +4
-Evaluate the given
-.I expr
-and return a list containing its normal form plus a summary
-of the resources used to compute that normal form:
+Evaluate the given expression and return a list containing its
+normal form plus a summary of the resources used to compute that
+normal form:
 .sp
 .in +4
 .nf
@@ -482,7 +483,7 @@ These variables are predefined in the top-level scope of the
 interpreter.
 .sp
 .ne 2
-.B "** (form)
+.B "** (object)
 .in +4
 The normal form of the expression most recently evaluated at the
 top level. Unspecific results and aborted computations do not
@@ -510,7 +511,7 @@ The smallest difference between two real numbers.
 .ne 2
 .B "*extensions* (list of symbols)
 .in +4
-Compiled-in extensions.
+Identifiers naming the compiled-in extensions.
 .in -4
 .sp
 .ne 2
@@ -529,7 +530,7 @@ is loaded, the variable is set to
 .in -4
 .sp
 .ne 2
-.B "*library-path* (list)
+.B "*library-path* (list of strings)
 .in +4
 A list containing each path contained in the
 .I S9FES_LIBRARY_PATH
@@ -542,6 +543,13 @@ environment variable (see below).
 Set to
 .B #t
 when \fBload\fPing a file, else \fB#f\fP.
+.in -4
+.sp
+.ne 2
+.B "*release-date* (string)
+.in +4
+A string containing the release date of the S9 interpreter in the form
+`YYYY-MM-DD'.
 .in -4
 .SH "MACROS
 A macro is a procedure that is applied to its unevaluated arguments.
@@ -775,7 +783,7 @@ and
 procedures. The value of this variable will be split at the colons
 and copied to the
 .B *library-path*
-variable then S9 starts.
+variable when S9 starts.
 .br
 Default:
 .I \&.:~/.s9fes:@S9DIR@
